Bug 389920 - After using File > Close, window shadow remains
Summary: After using File > Close, window shadow remains
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-05 16:39 UTC by Matthew Trescott
Modified: 2020-10-18 10:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8.1
Sentry Crash Report:


Attachments
Sample file to expose the bug (1.87 KB, application/gzip)
2018-02-05 16:39 UTC, Matthew Trescott
Details
Screenshot of problem (26.44 KB, image/png)
2018-02-05 16:39 UTC, Matthew Trescott
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Trescott 2018-02-05 16:39:10 UTC
Created attachment 110354 [details]
Sample file to expose the bug

After opening the attached file and closing it with File > Close, a window shadow remains on the gray background.
Comment 1 Matthew Trescott 2018-02-05 16:39:36 UTC
Created attachment 110355 [details]
Screenshot of problem
Comment 2 Alexander Semke 2018-02-05 17:49:39 UTC
This is a known problem. We'll try to fix it for the upcoming release 2.5.

P.S.: a lot of icons in the toolbar and a lot of entries in the main menu are missing in your screenshot. It looks like you didn't do 'make install' yet. You need to do it once so the different application artifacts like the definition of the main window, preview images for themes, etc. are installed correctly and can be found by LabPlot.
Comment 3 Stefan Gerlach 2018-02-10 11:57:37 UTC
confirmed on OpenSUSE 42.3 if using File->Open before. But not when started from command line ("labplot 2 test_labplot.lml").
Comment 4 Stefan Gerlach 2018-02-11 17:00:31 UTC
It seems to be a bug of older Qt versions. What Linux distribution and which Qt version do you use?
Comment 5 Matthew Trescott 2018-02-12 03:31:19 UTC
Arch Linux, Qt 5.10.x
Comment 6 Stefan Gerlach 2018-02-15 20:43:16 UTC
I could reproduce the problem with Qt 5.10 on Arch Linux. We have to think about a solution.
Comment 7 Christoph Feck 2018-02-16 00:05:47 UTC
Is this a QMdiSubWindow? If yes, it is the Breeze QStyle that adds the shadows, and it is possible that it is a bug there.
Comment 8 Alexander Semke 2018-04-30 07:35:29 UTC
(In reply to Christoph Feck from comment #7)
> Is this a QMdiSubWindow? If yes, it is the Breeze QStyle that adds the
> shadows, and it is possible that it is a bug there.
Yes, this is a QMdiSubWindow.
Comment 9 Stefan Gerlach 2018-11-11 08:24:27 UTC
The problem is still present on Arch with Qt 5.11.2 but doesn't seem to happen on Windows 10 (Qt 5.11.2).
Comment 10 Alexander Semke 2019-05-01 08:48:47 UTC
(In reply to Christoph Feck from comment #7)
> Is this a QMdiSubWindow? If yes, it is the Breeze QStyle that adds the
> shadows, and it is possible that it is a bug there.
The problem is still reproducible with the current versions of Qt and KF5 on an up-to-date openSuse LEAP 15. Christoph, what would be the best place to report and to fix this problem?
Comment 11 Alexander Semke 2020-10-18 10:13:46 UTC
Git commit 7c399a879ab75a6993acaddf057817a4450ce20b by Alexander Semke.
Committed on 18/10/2020 at 10:12.
Pushed by asemke into branch 'master'.

Remove sub-window shadow remnants when closing the project.
FIXED IN: 2.8.1

M  +1    -0    ChangeLog
M  +7    -0    src/kdefrontend/MainWin.cpp

https://invent.kde.org/education/labplot/commit/7c399a879ab75a6993acaddf057817a4450ce20b