Remove sub-window shadow remnants when closing the project.

BUG: 389920
FIXED IN: 2.8.1